2001-05-24  Radek Doulik  <rodo@ximian.com>

	* GNOME_GtkHTML_Editor.xml: split edit menu to placeholders

	* replaced HTML_VALIGN_CENTER with HTML_VALIGN_MIDDLE everywhere

	* image.c: replaced center align with middle

2001-05-22  Radek Doulik  <rodo@ximian.com>

	* table.c: added disable_change flag
	(set_ui): use disable_change flag

	* engine.c (impl_get_paragraph_data): dup value on return (pointed
	out by mla@1012surf.net)

2001-05-17  Radek Doulik  <rodo@ximian.com>

	* table.c (table_widget): use engine's window to allocate color

2001-05-15  Radek Doulik  <rodo@ximian.com>

	* Makefile.am (gtkhtml-editor-properties.h): added
	gtkhtml-editor-properties.c:	gtkhtml-editor-properties.h
	dependency

	* added Format/HTML mode menu item to test application

2001-05-12  Almer S. Tigelaar  <almer@gnome.org>

	* text.c (color_changed): Adjust signal callback for new
	by_user flag.

	* body.c (color_changed): Idem and don't change the color
	if we changed it ourselves programatically.

	* toolbar.c (color_changed): Same as for body.c.

2001-05-11  Gediminas Paulauskas <menesis@delfi.lt>

	* body.c, paragraph.c, popup.c: marked 30 strings for translation.

	* test-html-editor-control.c: initialize gettext to test
	translations also.

2001-05-09  Larry Ewing  <lewing@ximian.com>

	* GNOME_GtkHTML_Editor.xml: connect the menu item.

	* menubar.c (select_all_cb): make the new verb.

2001-05-08  Radek Doulik  <rodo@ximian.com>

	* search.c (gtk_html_search_dialog_new): s/backward search/backward

	* menubar.c: verb EditFindRegex, not EditFindRegexp

2001-05-07  Radek Doulik  <rodo@ximian.com>

	* GNOME_GtkHTML_Editor.xml: changed some tips as suggested by
	Aaron

2001-04-25  Radek Doulik  <rodo@ximian.com>

	* editor-control-factory.c (editor_set_format): use
	schedule_redraw

	* engine.c (impl_get_paragraph_data): update for data type change
	(impl_set_paragraph_data): likewise
	(impl_set_object_data_by_type): likewise
	(impl_run_command): return boolean value