@@ -1,3 +1,7 @@
+2001-05-29  Radek Doulik  <rodo@ximian.com>
+
+	* Makefile.am: removed dependency on libglade-xgettext
+
 2001-05-24  Radek Doulik  <rodo@ximian.com>
 
 	* GNOME_GtkHTML_Editor.xml: split edit menu to placeholders
